--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
+    "@parcel/transformer-image": "^2.0.0-beta.2",
     "@parcel/transformer-sass": "^2.0.0-beta.2"
   }
 }
